# archlint

./: .archlint-baseline.json  .archlint.yaml  .archlint.yaml.bak  .dockerignore  .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.scanner  ECOSYSTEM.md  FEATURES.md  FOR_AGENTS.md  INDEX.md  Makefile  ONBOARDING.md  README.en.md  README.md  README.ru.md  ROADMAP.md  TASKS.md  VALIDATION.en.md  VALIDATION.md  VALIDATOR_TAXONOMY.md  action.yml  go.mod  go.sum  monitored-repos.yaml  pyproject.toml
.claude/: contribution.md
.githooks/: pre-commit
archlint-rs/: Cargo.toml
archlint-rs/src/: analyzer.rs  badge.rs  config.rs  config.rs.patch  costlint.rs  diagram.rs  diff.rs  fix.rs  language_analyzer.rs  main.rs  migrate.rs  model.rs  nightly.rs  onboard.rs  orchestrator.rs  perflint.rs  promptlint.rs  seclint.rs  server.rs  session.rs  validate.rs  watch.rs
archlint-rs/tests/: functional_test.rs
archlint_validator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: DESIGN-RATIONALE.md  ECOSYSTEM.md  ROADMAP.md  agent-gate.md  behavior-graph.yaml  canonical-fingerprint-ssot-plan.md  golden-expectation.yaml  mcp-setup.md  plugin-architecture.md  proof-catalog.md  prufer-guide.md  research-metrics-performance-audit.md  smell-catalog.json  smell-catalog.md  solid-srp-formalization.md  typescript-guide.md  viewgraph-analysis.md
scan-results/: health-summary.json  manifest.json
scripts/: agent-report.sh  anomaly-detect.sh  api-surface.sh  arch-changelog.sh  author-risk.sh  auto-scan.sh  collect-all-history.py  (+16 more)
(+403 files in other folders)
