[package]
name = "archlint"
version = "0.1.0"
edition = "2021"
description = "Architecture linter - structural graphs, SOLID violations, cycle detection"
license = "MIT"

[dependencies]
petgraph = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rayon = "1.10"
bollard = "0.18"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
regex = "1"
toml = "0.8"
